# HyperbolicShellGeneration

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LBFGS.h  LBFGSB.h  batchGen.cpp  batchGen.h  circleGen.cpp  circleGen.h  curve.cpp  curve.h  curveHolder.cpp  curveHolder.h  energyFunction.cpp  energyFunction.h  main.cpp  point3D.cpp  point3D.h  shellGen.cpp  shellGen.h  shellNaming.cpp  shellNaming.h  shellParams.cpp  shellParams.h  vectorMaths.cpp  vectorMaths.h
LBFGSpp/: BFGSMat.h  BKLDLT.h  Cauchy.h  LineSearchBacktracking.h  LineSearchBracketing.h  LineSearchMoreThuente.h  LineSearchNocedalWright.h  Param.h  SubspaceMin.h
Python Code/: ParametricLettuceGeneration.py  ParametricLettuceGenerationOldMethod.py
PythonCode/: ParametricLettuceGeneration.py  txtToStl.py
